# zombie-bird-midgar

./: Cargo.toml  README.md  TODO.md
src/: app.rs  bird.rs  config.rs  main.rs  renderer.rs  scroll_handler.rs  sounds.rs  world.rs
